# convenientrpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
include/: logger.h  messagequeue.h  rpcapplication.h  rpcchannel.h  rpcconfig.h  rpccontroller.h  rpcprovider.h  zookeeperutil.h
src/: CMakeLists.txt  logger.cc  rpcapplication.cc  rpcchannel.cc  rpcconfig.cc  rpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
